# simple-clap-logger

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: standard.rs
src/: lib.rs
